diesel_compile_tests/tests/fail/derive/aliases.stderr
error[E0271]: type mismatch resolving `<id as Column>::Table == table`
  --> tests/fail/derive/aliases.rs:37:22
   |
37 |     user_alias.field(posts::id);
   |                ----- ^^^^^^^^^ type mismatch resolving `<id as Column>::Table == table`
   |                |
   |                required by a bound introduced by this call
   |
note: expected this to be `users::table`
  --> tests/fail/derive/aliases.rs:16:9
   |
16 |         id -> Integer,
   |         ^^
   = note: `posts::table` and `users::table` have similar names, but are actually distinct types
note: `posts::table` is defined in module `crate::posts` of the current crate
  --> tests/fail/derive/aliases.rs:14:1
   |
14 | / table! {
15 | |     posts {
16 | |         id -> Integer,
17 | |         author -> Integer,
18 | |         title -> Text,
19 | |     }
20 | | }
   | |_^
note: `users::table` is defined in module `crate::users` of the current crate
  --> tests/fail/derive/aliases.rs:7:1
   |
7  | / table! {
8  | |     users {
9  | |         id -> Integer,
10 | |         name -> Text,
11 | |     }
12 | | }
   | |_^
note: required by a bound in `Alias::<S>::field`
  --> $DIESEL/src/query_source/aliasing/alias.rs
   |
   |     pub fn field<F>(&self, field: F) -> AliasedField<S, F>
   |            ----- required by a bound in this associated function
   |     where
   |         F: Column<Table = S::Target>,
   |                   ^^^^^^^^^^^^^^^^^ required by this bound in `Alias::<S>::field`
   = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Once as Plus<Once>>::Output == Once`
  --> tests/fail/derive/aliases.rs:43:21
   |
43 |         .inner_join(post_alias)
   |          ---------- ^^^^^^^^^^ expected `Once`, found `MoreThanOnce`
   |          |
   |          required by a bound introduced by this call
   |
   = note: required for `AliasedField<posts2, posts::columns::id>` to implement `AppearsOnTable<query_source::joins::Join<JoinOn<query_source::joins::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>>`
   = note: 2 redundant requirements hidden
   = note: required for `((id, name), (AliasedField<posts2, id>, AliasedField<posts2, author>, AliasedField<posts2, title>), ...)` to implement `AppearsOnTable<query_source::joins::Join<JoinOn<query_source::joins::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>>`
   = note: required for `Join<JoinOn<Join<table, Alias<posts2>, Inner>, Grouped<Eq<Nullable<AliasedField<..., ...>>, ...>>>, ..., ...>` to implement `QuerySource`
   = note: 1 redundant requirement hidden
   = note: required for `JoinOn<Join<JoinOn<Join<table, Alias<posts2>, Inner>, Grouped<Eq<Nullable<...>, ...>>>, ..., ...>, ...>` to implement `QuerySource`
   = note: required for `SelectStatement<FromClause<JoinOn<Join<table, Alias<posts2>, Inner>, Grouped<Eq<Nullable<...>, ...>>>>>` to implement `InternalJoinDsl<Alias<posts2>, Inner, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>`
   = note: required for `SelectStatement<FromClause<JoinOn<Join<table, Alias<posts2>, Inner>, Grouped<Eq<Nullable<...>, ...>>>>>` to implement `JoinWithImplicitOnClause<Alias<posts2>, Inner>`
note: required by a bound in `inner_join`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn inner_join<Rhs>(self, rhs: Rhs) -> InnerJoin<Self, Rhs>
   |        ---------- required by a bound in this associated function
   |     where
   |         Self: JoinWithImplicitOnClause<Rhs, joins::Inner>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::inner_join`

error[E0271]: type mismatch resolving `<Join<JoinOn<Join<table, Alias<posts2>, Inner>, Grouped<Eq<Nullable<AliasedField<..., ...>>, ...>>>, ..., ...> as AppearsInFromClause<...>>::Count == Once`
  --> tests/fail/derive/aliases.rs:43:10
   |
43 |         .inner_join(post_alias)
   |          ^^^^^^^^^^ expected `MoreThanOnce`, found `Once`
   |
   = note: required for `AliasedField<posts2, posts::columns::id>` to implement `AppearsOnTable<query_source::joins::Join<JoinOn<query_source::joins::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>>`
   = note: 2 redundant requirements hidden
   = note: required for `((id, name), (AliasedField<posts2, id>, AliasedField<posts2, author>, AliasedField<posts2, title>), ...)` to implement `AppearsOnTable<query_source::joins::Join<JoinOn<query_source::joins::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>>`
   = note: required for `Join<JoinOn<Join<table, Alias<posts2>, Inner>, Grouped<Eq<Nullable<AliasedField<..., ...>>, ...>>>, ..., ...>` to implement `QuerySource`
   = note: 1 redundant requirement hidden
   = note: required for `JoinOn<Join<JoinOn<Join<table, Alias<posts2>, Inner>, Grouped<Eq<Nullable<...>, ...>>>, ..., ...>, ...>` to implement `QuerySource`
   = note: required for `SelectStatement<FromClause<JoinOn<Join<table, Alias<posts2>, Inner>, Grouped<Eq<Nullable<...>, ...>>>>>` to implement `InternalJoinDsl<Alias<posts2>, Inner, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>`

error[E0599]: the method `select` exists for struct `SelectStatement<FromClause<JoinOn<Join<JoinOn<Join<table, Alias<posts2>, Inner>, ...>, ..., ...>, ...>>>`, but its trait bounds were not satisfied
  --> tests/fail/derive/aliases.rs:44:10
   |
41 | /     users::table
42 | |         .inner_join(post_alias)
43 | |         .inner_join(post_alias)
44 | |         .select(users::id)
   | |         -^^^^^^ private field, not a method
   | |_________|
   |
   |
   = note: the following trait bounds were not satisfied:
           `&SelectStatement<FromClause<JoinOn<query_source::joins::Join<JoinOn<query_source::joins::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>>>: Table`
           which is required by `&SelectStatement<FromClause<JoinOn<query_source::joins::Join<JoinOn<query_source::joins::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>>>: diesel::QueryDsl`
           `&mut SelectStatement<FromClause<JoinOn<query_source::joins::Join<JoinOn<query_source::joins::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>>>: Table`
           which is required by `&mut SelectStatement<FromClause<JoinOn<query_source::joins::Join<JoinOn<query_source::joins::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>>>: diesel::QueryDsl`

error[E0277]: Cannot select `users::columns::id` from `Alias<users2>`
  --> tests/fail/derive/aliases.rs:49:23
   |
49 |     user_alias.select(users::id).load::<i32>(conn).unwrap();
   |                ------ ^^^^^^^^^ the trait `SelectableExpression<Alias<users2>>` is not implemented for `users::columns::id`
   |                |
   |                required by a bound introduced by this call
   |
   = note: `users::columns::id` is no valid selection for `Alias<users2>`
   = help: the following other types implement trait `SelectableExpression<QS>`:
             <users::columns::id as SelectableExpression<users::table>>
             <users::columns::id as SelectableExpression<query_source::joins::Join<Left, Right, Inner>>>
             <users::columns::id as SelectableExpression<query_source::joins::Join<Left, Right, LeftOuter>>>
             <users::columns::id as SelectableExpression<SelectStatement<FromClause<From>>>>
             <users::columns::id as SelectableExpression<JoinOn<Join, On>>>
             <users::columns::id as SelectableExpression<Only<users::table>>>
             <users::columns::id as SelectableExpression<Tablesample<users::table, TSM>>>
   = note: required for `SelectStatement<FromClause<Alias<users2>>>` to implement `SelectDsl<users::columns::id>`
   = note: 1 redundant requirement hidden
   = note: required for `Alias<users2>` to implement `SelectDsl<users::columns::id>`
note: required by a bound in `diesel::QueryDsl::select`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn select<Selection>(self, selection: Selection) -> Select<Self, Selection>
   |        ------ required by a bound in this associated function
...
   |         Self: methods::SelectDsl<Selection>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::select`

error[E0277]: Cannot select `users::columns::id` from `Alias<users2>`
  --> tests/fail/derive/aliases.rs:49:46
   |
49 |     user_alias.select(users::id).load::<i32>(conn).unwrap();
   |                                  ----        ^^^^ the trait `SelectableExpression<Alias<users2>>` is not implemented for `users::columns::id`
   |                                  |
   |                                  required by a bound introduced by this call
   |
   = note: `users::columns::id` is no valid selection for `Alias<users2>`
   = help: the following other types implement trait `SelectableExpression<QS>`:
             <users::columns::id as SelectableExpression<users::table>>
             <users::columns::id as SelectableExpression<query_source::joins::Join<Left, Right, Inner>>>
             <users::columns::id as SelectableExpression<query_source::joins::Join<Left, Right, LeftOuter>>>
             <users::columns::id as SelectableExpression<SelectStatement<FromClause<From>>>>
             <users::columns::id as SelectableExpression<JoinOn<Join, On>>>
             <users::columns::id as SelectableExpression<Only<users::table>>>
             <users::columns::id as SelectableExpression<Tablesample<users::table, TSM>>>
   = note: required for `diesel::query_builder::select_clause::SelectClause<users::columns::id>` to implement `diesel::query_builder::select_clause::SelectClauseExpression<FromClause<Alias<users2>>>`
   = note: required for `SelectStatement<FromClause<Alias<users2>>, diesel::query_builder::select_clause::SelectClause<users::columns::id>>` to implement `Query`
   = note: required for `SelectStatement<FromClause<Alias<users2>>, diesel::query_builder::select_clause::SelectClause<users::columns::id>>` to implement `LoadQuery<'_, _, i32>`
note: required by a bound in `diesel::RunQueryDsl::load`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn load<'query, U>(self, conn: &mut Conn) -> QueryResult<Vec<U>>
   |        ---- required by a bound in this associated function
   |     where
   |         Self: LoadQuery<'query, Conn, U>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::load`

error[E0277]: the trait bound `Alias<users2>: AppearsInFromClause<pets::table>` is not satisfied
  --> tests/fail/derive/aliases.rs:55:21
   |
55 |         .inner_join(user_alias)
   |          ---------- ^^^^^^^^^^ the trait `AppearsInFromClause<pets::table>` is not implemented for `Alias<users2>`
   |          |
   |          required by a bound introduced by this call
   |
   = help: the trait `AppearsInFromClause<QS>` is implemented for `Alias<S>`
   = note: required for `query_source::joins::Join<pets::table, Alias<users2>, Inner>` to implement `AppearsInFromClause<pets::table>`
note: required for `pets::columns::id` to implement `AppearsOnTable<query_source::joins::Join<pets::table, Alias<users2>, Inner>>`
  --> tests/fail/derive/aliases.rs:24:9
   |
24 |         id -> Integer,
   |         ^^
   = note: 2 redundant requirements hidden
   = note: required for `((pets::columns::id,), (AliasedField<users2, users::columns::id>, AliasedField<users2, users::columns::name>))` to implement `AppearsOnTable<query_source::joins::Join<pets::table, Alias<users2>, Inner>>`
   = note: required for `query_source::joins::Join<pets::table, Alias<users2>, Inner>` to implement `QuerySource`
   = note: 1 redundant requirement hidden
   = note: required for `JoinOn<query_source::joins::Join<pets::table, Alias<users2>, Inner>, _>` to implement `QuerySource`
   = note: required for `SelectStatement<FromClause<pets::table>>` to implement `InternalJoinDsl<Alias<users2>, Inner, _>`
   = note: 1 redundant requirement hidden
   = note: required for `pets::table` to implement `InternalJoinDsl<Alias<users2>, Inner, _>`
   = note: required for `pets::table` to implement `JoinWithImplicitOnClause<Alias<users2>, Inner>`
note: required by a bound in `inner_join`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn inner_join<Rhs>(self, rhs: Rhs) -> InnerJoin<Self, Rhs>
   |        ---------- required by a bound in this associated function
   |     where
   |         Self: JoinWithImplicitOnClause<Rhs, joins::Inner>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::inner_join`

error[E0277]: the trait bound `users::table: JoinTo<pets::table>` is not satisfied
  --> tests/fail/derive/aliases.rs:55:10
   |
55 |         .inner_join(user_alias)
   |          ^^^^^^^^^^ the trait `JoinTo<pets::table>` is not implemented for `users::table`
   |
   = help: the following other types implement trait `JoinTo<T>`:
             <users::table as JoinTo<posts::table>>
             <users::table as JoinTo<query_source::joins::Join<Left, Right, Kind>>>
             <users::table as JoinTo<BoxedSelectStatement<'a, FromClause<QS>, ST, DB>>>
             <users::table as JoinTo<SelectStatement<FromClause<F>, S, D, W, O, L, Of, G>>>
             <users::table as JoinTo<Alias<S>>>
             <users::table as JoinTo<JoinOn<Join, On>>>
             <users::table as JoinTo<Only<S>>>
             <users::table as JoinTo<Tablesample<S, TSM>>>
   = note: required for `Alias<users2>` to implement `JoinTo<pets::table>`
   = note: required for `pets::table` to implement `JoinWithImplicitOnClause<Alias<users2>, Inner>`

error[E0599]: the method `select` exists for struct `SelectStatement<FromClause<JoinOn<Join<table, Alias<users2>, Inner>, _>>>`, but its trait bounds were not satisfied
  --> tests/fail/derive/aliases.rs:56:10
   |
54 | /     pets::table
55 | |         .inner_join(user_alias)
56 | |         .select(pets::id)
   | |         -^^^^^^ private field, not a method
   | |_________|
   |
   |
   = note: the following trait bounds were not satisfied:
           `&SelectStatement<FromClause<JoinOn<query_source::joins::Join<pets::table, Alias<users2>, Inner>, _>>>: Table`
           which is required by `&SelectStatement<FromClause<JoinOn<query_source::joins::Join<pets::table, Alias<users2>, Inner>, _>>>: diesel::QueryDsl`
           `&mut SelectStatement<FromClause<JoinOn<query_source::joins::Join<pets::table, Alias<users2>, Inner>, _>>>: Table`
           which is required by `&mut SelectStatement<FromClause<JoinOn<query_source::joins::Join<pets::table, Alias<users2>, Inner>, _>>>: diesel::QueryDsl`
